--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@
       <div class="flex-col">
         <div class="flex-col">
           <div class="flex-row bds">
-            <div class="gen-word">
-              <div id="word-test" class="word-test"></div>
-            </div>
+            <div id="word-test" class="gen-word"></div>
           </div>
 
           <div class="flex-row bds">
-            <div class="input-word">
-              <div id="input-test" class="input-test"></div>
-            </div>
-            <div class="arrow">^</div>
+            <div id="input-test" class="input-word"></div>
           </div>
         </div>
 
