add thai key game

--- a/index.html
+++ b/index.html
@@ -25,28 +25,40 @@
             <div class="flex-row">
               <div class="flex-row space-x-8">
                 <div id="Digit1" class="numpad">
-                  <div>1</div>
+                  <div class="">
+                    <div>!</div>
+                    <div>1</div>
+                  </div>
                   <div class="">
                     <div>+</div>
                     <div>ๅ</div>
                   </div>
                 </div>
                 <div id="Digit2" class="numpad">
-                  <div>2</div>
+                  <div class="">
+                    <div>@</div>
+                    <div>2</div>
+                  </div>
                   <div class="">
                     <div>๑</div>
                     <div>/</div>
                   </div>
                 </div>
                 <div id="Digit3" class="numpad">
-                  <div>3</div>
+                  <div class="">
+                    <div>#</div>
+                    <div>3</div>
+                  </div>
                   <div class="">
                     <div>๒</div>
                     <div>-</div>
                   </div>
                 </div>
                 <div id="Digit4" class="numpad">
-                  <div>4</div>
+                  <div class="">
+                    <div>$</div>
+                    <div>4</div>
+                  </div>
                   <div class="">
                     <div>๓</div>
                     <div>ภ</div>
@@ -55,14 +67,20 @@
               </div>
               <div class="flex-row space-x-8">
                 <div id="Digit5" class="numpad">
-                  <div>5</div>
+                  <div class="">
+                    <div>%</div>
+                    <div>5</div>
+                  </div>
                   <div class="">
                     <div>๔</div>
                     <div>ถ</div>
                   </div>
                 </div>
                 <div id="Digit6" class="numpad">
-                  <div>6</div>
+                  <div class="">
+                    <div>^</div>
+                    <div>6</div>
+                  </div>
                   <div class="">
                     <div>ู</div>
                     <div>ุ</div>
@@ -71,28 +89,40 @@
               </div>
               <div class="flex-row space-x-8">
                 <div id="Digit7" class="numpad">
-                  <div>7</div>
+                  <div class="">
+                    <div>&</div>
+                    <div>7</div>
+                  </div>
                   <div class="">
                     <div>฿</div>
                     <div>ึ</div>
                   </div>
                 </div>
                 <div id="Digit8" class="numpad">
-                  <div>8</div>
+                  <div class="">
+                    <div>*</div>
+                    <div>8</div>
+                  </div>
                   <div class="">
                     <div>๕</div>
                     <div>ค</div>
                   </div>
                 </div>
                 <div id="Digit9" class="numpad">
-                  <div>9</div>
+                  <div class="">
+                    <div>(</div>
+                    <div>9</div>
+                  </div>
                   <div class="">
                     <div>๖</div>
                     <div>ต</div>
                   </div>
                 </div>
                 <div id="Digit0" class="numpad">
-                  <div>0</div>
+                  <div class="">
+                    <div>)</div>
+                    <div>0</div>
+                  </div>
                   <div class="">
                     <div>๗</div>
                     <div>จ</div>
@@ -101,14 +131,20 @@
               </div>
               <div class="flex-row space-x-8">
                 <div id="Minus" class="numpad">
-                  <div></div>
+                  <div class="">
+                    <div>_</div>
+                    <div>-</div>
+                  </div>
                   <div class="">
                     <div>๘</div>
                     <div>ข</div>
                   </div>
                 </div>
                 <div id="Equal" class="numpad">
-                  <div></div>
+                  <div class="">
+                    <div>+</div>
+                    <div>=</div>
+                  </div>
                   <div class="">
                     <div>๙</div>
                     <div>ช</div>
@@ -120,64 +156,142 @@
             <div class="flex-row ml-16">
               <div class="flex-row space-x-8">
                 <div id="KeyQ" class="keycap">
-                  <div>๐</div>
-                  <div>ๆ</div>
+                  <div class="">
+                    <div></div>
+                    <div>Q</div>
+                  </div>
+                  <div class="">
+                    <div>๐</div>
+                    <div>ๆ</div>
+                  </div>
                 </div>
                 <div id="KeyW" class="keycap">
-                  <div>"</div>
-                  <div>ไ</div>
+                  <div class="">
+                    <div></div>
+                    <div>W</div>
+                  </div>
+                  <div class="">
+                    <div>"</div>
+                    <div>ไ</div>
+                  </div>
                 </div>
                 <div id="KeyE" class="keycap">
-                  <div>ฎ</div>
-                  <div>ำ</div>
+                  <div class="">
+                    <div></div>
+                    <div>E</div>
+                  </div>
+                  <div class="">
+                    <div>ฎ</div>
+                    <div>ำ</div>
+                  </div>
                 </div>
                 <div id="KeyR" class="keycap">
-                  <div>ฑ</div>
-                  <div>พ</div>
+                  <div class="">
+                    <div></div>
+                    <div>R</div>
+                  </div>
+                  <div class="">
+                    <div>ฑ</div>
+                    <div>พ</div>
+                  </div>
                 </div>
               </div>
               <div class="flex-row space-x-8">
                 <div id="KeyT" class="keycap">
-                  <div>ธ</div>
-                  <div>ะ</div>
+                  <div class="">
+                    <div></div>
+                    <div>T</div>
+                  </div>
+                  <div class="">
+                    <div>ธ</div>
+                    <div>ะ</div>
+                  </div>
                 </div>
                 <div id="KeyY" class="keycap">
-                  <div>ํ</div>
-                  <div>ั</div>
+                  <div class="">
+                    <div></div>
+                    <div>Y</div>
+                  </div>
+                  <div class="">
+                    <div>ํ</div>
+                    <div>ั</div>
+                  </div>
                 </div>
               </div>
               <div class="flex-row space-x-8">
                 <div id="KeyU" class="keycap">
-                  <div>๊</div>
-                  <div>ี</div>
+                  <div class="">
+                    <div></div>
+                    <div>U</div>
+                  </div>
+                  <div class="">
+                    <div>๊</div>
+                    <div>ี</div>
+                  </div>
                 </div>
                 <div id="KeyI" class="keycap">
-                  <div>ณ</div>
-                  <div>ร</div>
+                  <div class="">
+                    <div></div>
+                    <div>I</div>
+                  </div>
+                  <div class="">
+                    <div>ณ</div>
+                    <div>ร</div>
+                  </div>
                 </div>
                 <div id="KeyO" class="keycap">
-                  <div>ฯ</div>
-                  <div>น</div>
+                  <div class="">
+                    <div></div>
+                    <div>O</div>
+                  </div>
+                  <div class="">
+                    <div>ฯ</div>
+                    <div>น</div>
+                  </div>
                 </div>
                 <div id="KeyP" class="keycap">
-                  <div>ญ</div>
-                  <div>ย</div>
+                  <div class="">
+                    <div></div>
+                    <div>P</div>
+                  </div>
+                  <div class="">
+                    <div>ญ</div>
+                    <div>ย</div>
+                  </div>
                 </div>
               </div>
               <div class="flex-row space-x-8">
                 <div id="BracketLeft" class="keycap">
-                  <div>ฐ</div>
-                  <div>บ</div>
+                  <div class="">
+                    <div>{</div>
+                    <div>[</div>
+                  </div>
+                  <div class="">
+                    <div>ฐ</div>
+                    <div>บ</div>
+                  </div>
                 </div>
                 <div id="BracketRight" class="keycap">
-                  <div>,</div>
-                  <div>ล</div>
+                  <div class="">
+                    <div>}</div>
+                    <div>]</div>
+                  </div>
+                  <div class="">
+                    <div>,</div>
+                    <div>ล</div>
+                  </div>
                 </div>
               </div>
               <div class="flex-row space-x-8">
                 <div id="Backslash" class="keycap">
-                  <div>ฅ</div>
-                  <div>ฃ</div>
+                  <div class="">
+                    <div>|</div>
+                    <div>\</div>
+                  </div>
+                  <div class="">
+                    <div>ฅ</div>
+                    <div>ฃ</div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -185,54 +299,120 @@
             <div class="flex-row ml-32">
               <div class="flex-row space-x-8">
                 <div id="KeyA" class="keycap">
-                  <div>ฤ</div>
-                  <div>ฟ</div>
+                  <div class="">
+                    <div></div>
+                    <div>A</div>
+                  </div>
+                  <div class="">
+                    <div>ฤ</div>
+                    <div>ฟ</div>
+                  </div>
                 </div>
                 <div id="KeyS" class="keycap">
-                  <div>ฆ</div>
-                  <div>ห</div>
+                  <div class="">
+                    <div></div>
+                    <div>S</div>
+                  </div>
+                  <div class="">
+                    <div>ฆ</div>
+                    <div>ห</div>
+                  </div>
                 </div>
                 <div id="KeyD" class="keycap">
-                  <div>ฏ</div>
-                  <div>ก</div>
+                  <div class="">
+                    <div></div>
+                    <div>D</div>
+                  </div>
+                  <div class="">
+                    <div>ฏ</div>
+                    <div>ก</div>
+                  </div>
                 </div>
                 <div id="KeyF" class="keycap">
-                  <div>โ</div>
-                  <div>ด</div>
+                  <div class="">
+                    <div></div>
+                    <div>F</div>
+                  </div>
+                  <div class="">
+                    <div>โ</div>
+                    <div>ด</div>
+                  </div>
                 </div>
               </div>
               <div class="flex-row space-x-8">
                 <div id="KeyG" class="keycap">
-                  <div>ฌ</div>
-                  <div>เ</div>
+                  <div class="">
+                    <div></div>
+                    <div>G</div>
+                  </div>
+                  <div class="">
+                    <div>ฌ</div>
+                    <div>เ</div>
+                  </div>
                 </div>
                 <div id="KeyH" class="keycap">
-                  <div>็</div>
-                  <div>้</div>
+                  <div class="">
+                    <div></div>
+                    <div>H</div>
+                  </div>
+                  <div class="">
+                    <div>็</div>
+                    <div>้</div>
+                  </div>
                 </div>
               </div>
               <div class="flex-row space-x-8">
                 <div id="KeyJ" class="keycap">
-                  <div>๋</div>
-                  <div>่</div>
+                  <div class="">
+                    <div></div>
+                    <div>J</div>
+                  </div>
+                  <div class="">
+                    <div>๋</div>
+                    <div>่</div>
+                  </div>
                 </div>
                 <div id="KeyK" class="keycap">
-                  <div>ษ</div>
-                  <div>า</div>
+                  <div class="">
+                    <div></div>
+                    <div>K</div>
+                  </div>
+                  <div class="">
+                    <div>ษ</div>
+                    <div>า</div>
+                  </div>
                 </div>
                 <div id="KeyL" class="keycap">
-                  <div>ศ</div>
-                  <div>ส</div>
+                  <div class="">
+                    <div></div>
+                    <div>L</div>
+                  </div>
+                  <div class="">
+                    <div>ศ</div>
+                    <div>ส</div>
+                  </div>
                 </div>
                 <div id="Semicolon" class="keycap">
-                  <div>ซ</div>
-                  <div>ว</div>
+                  <div class="">
+                    <div>:</div>
+                    <div>;</div>
+                  </div>
+                  <div class="">
+                    <div>ซ</div>
+                    <div>ว</div>
+                  </div>
                 </div>
               </div>
               <div class="flex-row space-x-8">
                 <div id="Quote" class="keycap">
-                  <div>.</div>
-                  <div>ง</div>
+                  <div class="">
+                    <div>"</div>
+                    <div>'</div>
+                  </div>
+                  <div class="">
+                    <div>.</div>
+                    <div>ง</div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -240,48 +420,108 @@
             <div class="flex-row ml-48">
               <div class="flex-row space-x-8">
                 <div id="KeyZ" class="keycap">
-                  <div>(</div>
-                  <div>ผ</div>
+                  <div class="">
+                    <div></div>
+                    <div>Z</div>
+                  </div>
+                  <div class="">
+                    <div>(</div>
+                    <div>ผ</div>
+                  </div>
                 </div>
                 <div id="KeyX" class="keycap">
-                  <div>)</div>
-                  <div>ป</div>
+                  <div class="">
+                    <div></div>
+                    <div>X</div>
+                  </div>
+                  <div class="">
+                    <div>)</div>
+                    <div>ป</div>
+                  </div>
                 </div>
                 <div id="KeyC" class="keycap">
-                  <div>ฉ</div>
-                  <div>แ</div>
+                  <div class="">
+                    <div></div>
+                    <div>C</div>
+                  </div>
+                  <div class="">
+                    <div>ฉ</div>
+                    <div>แ</div>
+                  </div>
                 </div>
                 <div id="KeyV" class="keycap">
-                  <div>ฮ</div>
-                  <div>อ</div>
+                  <div class="">
+                    <div></div>
+                    <div>V</div>
+                  </div>
+                  <div class="">
+                    <div>ฮ</div>
+                    <div>อ</div>
+                  </div>
                 </div>
               </div>
               <div class="flex-row space-x-8">
                 <div id="KeyB" class="keycap">
-                  <div>.</div>
-                  <div>ิ</div>
+                  <div class="">
+                    <div></div>
+                    <div>B</div>
+                  </div>
+                  <div class="">
+                    <div>.</div>
+                    <div>ิ</div>
+                  </div>
                 </div>
                 <div id="KeyN" class="keycap">
-                  <div>์</div>
-                  <div>ื</div>
+                  <div class="">
+                    <div></div>
+                    <div>N</div>
+                  </div>
+                  <div class="">
+                    <div>์</div>
+                    <div>ื</div>
+                  </div>
                 </div>
               </div>
               <div class="flex-row space-x-8">
                 <div id="KeyM" class="keycap">
-                  <div>?</div>
-                  <div>ท</div>
+                  <div class="">
+                    <div></div>
+                    <div>M</div>
+                  </div>
+                  <div class="">
+                    <div>?</div>
+                    <div>ท</div>
+                  </div>
                 </div>
                 <div id="Comma" class="keycap">
-                  <div>ฒ</div>
-                  <div>ม</div>
+                  <div class="">
+                    <div><</div>
+                    <div>,</div>
+                  </div>
+                  <div class="">
+                    <div>ฒ</div>
+                    <div>ม</div>
+                  </div>
                 </div>
                 <div id="Period" class="keycap">
-                  <div>ฬ</div>
-                  <div>ใ</div>
+                  <div class="">
+                    <div>></div>
+                    <div>.</div>
+                  </div>
+                  <div class="">
+                    <div>ฬ</div>
+                    <div>ใ</div>
+                  </div>
                 </div>
                 <div id="Slash" class="keycap">
-                  <div>ฦ</div>
-                  <div>ฝ</div>
+                  <div class="">
+                    <div>?</div>
+                    <div>/</div>
+                  </div>
+                  <div class="">
+                    <div>ฦ</div>
+                    <div>ฝ</div>
+                  </div>
                 </div>
               </div>
             </div>
